--- a/04Wk01/conFusion/www/templates/contactus.html
+++ b/04Wk01/conFusion/www/templates/contactus.html
@@ -1,5 +1,26 @@
 <ion-view view-title="Contact Us">
-  <ion-content>
-    <h1>Contact Us</h1>
-  </ion-content>
+    <ion-content>
+        <div class="card">
+            <div class="item item-divider">
+                Local Information
+            </div>
+            <div class="item item-text-wrap">
+                <p>
+                    <h2>Our Addres</h2></p>
+                <p>
+                    121, Clear Water Bay Road </br>
+                    Clear Water Bay, Kowloon </br>
+                    HONG KONG
+                </p>
+                <i class="icon ion-ios-telephone"></i>: +852 1234 5678 </br>
+                <i class="icon ion-printer"></i>: +852 8765 4321 </br>
+                <i class="icon ion-email"></i>: <a href="">confusion@food.net</a> </br>
+            </div>
+            <div class="button-bar">
+                <a class="button button-positive"><i class="icon ion-ios-telephone"></i>  Call</a>
+                <a class="button button-calm"><i class="icon ion-ion-social-skype-outline"></i>  Skype</a>
+                <a class="button button-balanced"><i class="icon ion-email"></i>  Email</a>
+            </div>
+        </div>
+    </ion-content>
 </ion-view>
